[gd_scene load_steps=3 format=3 uid="uid://cqbftgj31w5se"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_oo4sg"]
[ext_resource type="PackedScene" uid="uid://bw7tcd3ddsu4r" path="res://scenes/world/world_builder.tscn" id="3_jt5x5"]

[node name="World" type="Node3D"]
script = ExtResource("1_oo4sg")

[node name="WorldBuilder" parent="." instance=ExtResource("3_jt5x5")]
unique_name_in_owner = true

[node name="Chunks" type="Node3D" parent="."]
unique_name_in_owner = true

[connection signal="chunk_built" from="WorldBuilder" to="." method="_on_world_builder_chunk_built"]
[connection signal="chunk_disposed" from="WorldBuilder" to="." method="_on_world_builder_chunk_disposed"]
